--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
-    "gulp-clean-css": "^4.2.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-minify": "^3.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2"
   },
   "dependencies": {
     "browser-sync": "^2.26.7",
-    "gulp-minify-css": "^1.2.4"
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-tinypng-compress": "^1.2.5"
   }
 }
